assets/css/style.scss
/* ... */
.outer {
  padding-left: 3vw;
  padding-right: 3vw;
}

.inner {
  margin-left: auto;
  margin-right: auto;
  max-width: 720px;
}

.inner-wide {
  margin-left: auto;
  margin-right: auto;
  max-width: 1080px;
}

/**
 * 4. Site Header
 * ----------------------------------------------------------------------------
 */
.site-header {
  background: $gray-lightest;
  border-bottom: 1px solid $gray-lighter;
  margin: 0 0 3.33333em;
  padding-bottom: 1.11111em;
  padding-top: 1.11111em;
}

.site-header a {
  color: $gray-darkest;
}

.site-header a:hover {
  color: $color-accent;
}

.site-header-inside {
  -ms-flex-align: center;
  -webkit-align-items: center;
  align-items: center;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
}

.site-branding {
  -ms-flex: 0 0 auto;
  -webkit-flex: 0 0 auto;
  flex: 0 0 auto;
  margin-right: 30px;
}

.site-logo {
  margin: 0;
}

.site-logo img {
  max-height: 48px;
}

.site-title {
  color: $gray-darkest;
  font-size: 1.33333rem;
  font-weight: bold;
  line-height: 1.2;
  margin: 0;
  text-rendering: optimizeLegibility;
}

.site-header .site-navigation {
  -ms-flex-align: center;
  -webkit-align-items: center;
  align-items: center;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  -ms-flex: 1 1 auto;
  -webkit-flex: 1 1 auto;
  flex: 1 1 auto;
}

.site-header .menu {
  -ms-flex: 1 1 auto;
  -webkit-flex: 1 1 auto;
  flex: 1 1 auto;
  list-style: none;
  margin: 0;
  padding: 0;
}

.site-header .menu-item {
  display: inline-block;
  font-size: 14px;
  line-height: 1.5;
  margin: 0 25px 0 0;
}

.site-header .sidebar-toggle {
  -ms-flex: 0 0 auto;
  -webkit-flex: 0 0 auto;
  flex: 0 0 auto;
  margin-left: auto;
  position: relative;
}

/**
 * 5. Content
 * 5.1 Posts and Pages
 * ----------------------------------------------------------------------------
 */
.post {
  margin-bottom: 1.66667em;
}

.post-header {
  margin-bottom: 1.66667em;
}

.post-title {
  color: $gray-darkest;
  font-size: 2.22222rem;
  margin: 0 0 0.75em;
}

.post-title a {
  color: inherit;
}

.post-meta {
  color: $gray;
  font-size: 0.77778rem;
  letter-spacing: 2px;
  line-height: 1.5;
  margin-bottom: 1.42857em;
  text-transform: uppercase;
}

.featured-badge {
  color: $color-accent;
}

.post-thumbnail {
  display: block;
  margin-bottom: 1.66667em;
}

.post-thumbnail img {
  width: 100%;
}

.post-footer {
  margin-bottom: 1.66667em;
}

.post-tags,
.post-share {
  font-size: 0.77778rem;
  line-height: 1.5;
}

.post-tags a {
  display: inline-block;
  margin: 0 10px 0 0;
}

.post-tags a:before {
  content: "\0023";
}

.post-share-title {
  color: $gray-darkest;
  display: inline-block;
  font-weight: bold;
}

.post-share a {
  display: inline-block;
  margin: 0 0 0 10px;
}

.author-box {
  border: 1px solid $gray-lighter;
  border-radius: 3px;
  margin: 1.66667em 0 3.33333em;
  padding: 1.66667em 30px;
  text-align: center;
}

.author-avatar {
  margin: 0 0 1.66667em;
}

.author-avatar .avatar {
  border: 2px solid $color-accent;
  border-radius: 100%;
  box-shadow: 0 0 1px 7px rgba($color-accent,.1);
  display: inline-block;
  height: 70px;
  width: 70px;
}

.author-title {
  font-size: 1rem;
  margin: 0 0 0.55556em;
}

.author-description {
  font-size: 14px;
  margin: 0.71428em 0;
}

.caption-text {
  color: $gray;
  font-size: 16px;
  font-style: italic;
  line-height: 1.5;
  margin-bottom: 1.66667em;
  padding-top: 1%;
  text-align: center; 
}

/* Featured Posts */
.featured-posts {
  border-bottom: 1px solid $gray-lighter;
  margin-bottom: 5em;
  padding-bottom: 1.66667em;
}

.featured-posts .read-more {
  margin-top: 2.5em;
}

/* Post Feed */
.post-feed-title {
  color: $gray-dark;
  font-size: 14px;
  font-weight: normal;
  letter-spacing: 2px;
  line-height: 1.2;
  margin-bottom: 2.14285em;
  margin-top: 0;
  text-transform: uppercase;
}

.post-feed-title:after {
  background-color: $color-accent;
  display: block;
  content: "";
  height: 1px;
  margin-top: 15px;
  width: 60px;
}

.post-feed .post {
  margin-left: auto;
  margin-right: auto;
  max-width: 720px;
}

.post-feed .post-title {
  font-size: 1.55556rem;
  margin-bottom: 0.53571em;
}

.post-feed .post-meta {
  margin-bottom: 0.71428em;
}

/* Archives */
.page-header {
  border-left: 3px solid $color-accent;
  margin-bottom: 3.33333em;
  padding-left: 30px;
}

.page-title {
  font-size: 1.33333rem;
  margin: 0;
}

.page-description {
  color: $gray;
  font-size: 0.77778rem;
  line-height: 1.5;
  margin: 0.25em 0 0;
}

/* Read Next */
.read-next-title {
  color: $gray-dark;
  font-size: 14px;
  font-weight: normal;
  letter-spacing: 2px;
  margin: 0 0 2.14285em;
  text-transform: uppercase;
}

.read-next-title:after {
  background-color: $color-accent;
  display: block;
  content: "";
  height: 1px;
  margin-top: 15px;
  width: 60px;
}

.read-next .post {
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  margin-bottom: 1.66667em;
}

.read-next .post-header {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  margin-bottom: 0.83333em;
}

.read-next .post-meta {
  margin-bottom: 0.5em;
}

.read-next .post-title {
  font-size: 1.33333rem;
  margin: 0;
}

.read-next .post-tags {
  margin: 1.07142em 0 0;
}

.read-next .post-thumbnail {
  -ms-flex: 0 0 auto;
  -webkit-flex: 0 0 auto;
  flex: 0 0 auto;
  margin: 0 0 0.83333em 30px;
  width: 150px;
}

/* Newsletter section */
.newsletter-box {
  background: $gray-lightest;
  border: 1px solid $gray-lighter;
  border-radius: 3px;
  box-sizing: border-box;
  margin-bottom: 3.33333em;
  margin-top: 3.33333em;
  padding: 3.33333em 30px;
  text-align: center;
}

.newsletter-box-title {
  font-size: 2rem;
  margin: 0 0 0.41667em;
}

/* Hero */
.hero-wrap {
  background: $gray-lightest;
  border-bottom: 1px solid $gray-lighter;
  margin: 0 0 3.33333em;
  position: relative;
}

.hero-wrap .site-header {
  background: 0;
  border: 0;
  margin: 0;
  position: relative;
}
/* ... */

